create github pages

--- a/vaikebussirent.html
+++ b/vaikebussirent.html
@@ -53,7 +53,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="mbr-section content8 cid-resYOVMjit" id="content8-1b">
+<section class="engine"><a href="https://mobirise.info/i">free site creation software</a></section><section class="mbr-section content8 cid-resYOVMjit" id="content8-1b">
 
     
 
@@ -97,8 +97,8 @@
                         <img src="assets/images/renault-1.1-550x337.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title pb-3 mbr-fonts-style display-7">RENAULT TRAFIC PASSENGER
-<div>2015, manuaal, 8+1 kohta</div></h4>
+                        <h4 class="card-title pb-3 mbr-fonts-style display-7"><strong>RENAULT TRAFIC PASSENGER
+</strong><div><strong>2015, manuaal, 8+1 kohta</strong></div></h4>
                         <p class="mbr-text mbr-fonts-style display-7">Lühiajaline 5€/h 
 <br>1-3 päeva 35 €/päev 
 <br>
@@ -121,8 +121,8 @@
                         <img src="assets/images/hyundai-1.1-550x337.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title pb-3 mbr-fonts-style display-7">HYUNDAI H-1 TRAVEL
-<div>2009, manuaal, 7+1 kohta</div></h4>
+                        <h4 class="card-title pb-3 mbr-fonts-style display-7"><strong>HYUNDAI H-1 TRAVEL
+</strong><div><strong>2009, manuaal, 7+1 kohta</strong></div></h4>
                         <p class="mbr-text mbr-fonts-style display-7">Lühiajaline 5€/h 
 <br>1-3 päeva 35 €/päev 
 <br>
@@ -145,8 +145,8 @@
                         <img src="assets/images/skoda-1.1-536x337.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title pb-3 mbr-fonts-style display-7">SKODA SUPERB II COMBI
-<div>2013, manuaal, 5 kohta</div></h4>
+                        <h4 class="card-title pb-3 mbr-fonts-style display-7"><strong>SKODA SUPERB II COMBI
+</strong><div><strong>2013, manuaal, 5 kohta</strong></div></h4>
                         <p class="mbr-text mbr-fonts-style display-7">Lühiajaline 5€/h 
 <br>1-3 päeva 35 €/päev 
 <br>
@@ -169,8 +169,8 @@
                         <img src="assets/images/mb-1.1-550x337.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title pb-3 mbr-fonts-style display-7">MERCEDES BENZ V AVANTGARDE A2
-<div>2019, automaat, 6+1 kohta ainult juhiga</div></h4>
+                        <h4 class="card-title pb-3 mbr-fonts-style display-7"><strong>MERCEDES BENZ V AVANTGARDE A2
+</strong><div><strong>2019, automaat, 6+1 kohta ainult juhiga</strong></div></h4>
                         <p class="mbr-text mbr-fonts-style display-7">Esinduslik sõiduk sobib Ideaalselt äripartnerite transpordiks, pulmasõitudeks, VIP transpordiks.
 <br>
 <br>Vajadusel teenindus erinevates keeltes: eesti, inglise, vene ja soome keeles.*
@@ -341,7 +341,7 @@
                     <div data-form-alert="" hidden="">Täname päringu eest!
 Vastame peatselt ...</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="qgf9pk47xSgp8ZEFAFJ1b8D0BVYyh1QlKx4/LiggXMnTrVuAByOCZJ6cJafHhSF0H2z1OxcKdsaYqg77o3OR/60IhrHqYcQ2fNuqkTVu8HOYCykzuKx3H6FucjDHx8+5">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="NnX1ewyHTk4dPtOSoIl977/qI9SEFMEVZ4MyzMRbIFiSPyDaRQtTbOBOCnacLxcjtIXIBjnZHBAo7RZ3+W+ZXkkcpvIr7op2Qk9mZgtlBXM/GDkiibxX/hY2IzBSybAb">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
