--- a/page2.html
+++ b/page2.html
@@ -53,7 +53,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">create your own web page for free</a></section><section class="mbr-section content8 cid-resYS8TEgR" id="content8-1c">
+<section class="engine"><a href="https://mobirise.info/c">site builder</a></section><section class="mbr-section content8 cid-resYS8TEgR" id="content8-1c">
 
     
 
@@ -97,7 +97,7 @@
                         <img src="assets/images/img-165-872x654.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title pb-3 mbr-fonts-style display-7">KANUUDE RENT</h4>
+                        <h4 class="card-title pb-3 mbr-fonts-style display-7"><strong>KANUUDE RENT</strong></h4>
                         <p class="mbr-text mbr-fonts-style display-7">2 inimest 25€ ööpäev<br>rent sisaldab mõlade ja ohtutusvestide kasutamist kahele inimesele.<br>Lisa inimene +5€<br><br>Kokkuleppel transport Teie poolt valitud sihtkohta ja tagasi.</p>
                     </div>
                 </div>
@@ -109,7 +109,7 @@
                         <img src="assets/images/easy-to-dry-water-sports-shoes-diving-surf-shoes-men-and-women-children-can-we-466x409.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title pb-3 mbr-fonts-style display-7">LISAVARUSTUS</h4>
+                        <h4 class="card-title pb-3 mbr-fonts-style display-7"><strong>LISAVARUSTUS</strong></h4>
                         <p class="mbr-text mbr-fonts-style display-7">VEEKINDEL KOTT 10L - 3€/ööpäev<br><br>VeEEKINDEL KOTT 40L - 3,50€/ööpäev<br><br>RANNAJALATSID - 4€/ööpäev<br>Libisemiskindlad Rannajalatsid meestele- naistele.
 <br>Sobivad kanuusõiduks, vees sportimiseks.
 <br>Kaitseb jalgu teravate kivide eest.
@@ -126,7 +126,7 @@
                         <img src="assets/images/img-2426-872x654.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title pb-3 mbr-fonts-style display-7">LISATEENUSED</h4>
+                        <h4 class="card-title pb-3 mbr-fonts-style display-7"><strong>LISATEENUSED</strong></h4>
                         <p class="mbr-text mbr-fonts-style display-7">KANUUDE TRANSPORT<br> Teie poolt valitud sihtkohta ja tagasi.<br>Hind kokkuleppel.<br><br>MATKASÖÖGID -&nbsp;<br>Menüü on koostamisel</p>
                     </div>
                 </div>
@@ -138,8 +138,8 @@
                         <a href="page3.html"><img src="assets/images/eesti-kaart-joed-872x600.jpg" alt="Mobirise" title=""></a>
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title pb-3 mbr-fonts-style display-7"><a href="page3.html">KUHU MINNA?</a></h4>
-                        <p class="mbr-text mbr-fonts-style display-7"><a href="page3.html" class="text-info">EESTI JÕGEDE KAART ja kirjeldused</a><br><a href="page3.html" class="text-info">ÕPETLIKUD VIDEOD</a><br><a href="page3.html" class="text-info">VAATA LISAKS...</a></p>
+                        <h4 class="card-title pb-3 mbr-fonts-style display-7"><a href="page3.html"><strong>KUHU MINNA?</strong></a></h4>
+                        <p class="mbr-text mbr-fonts-style display-7"><strong><a href="page3.html" class="text-info">EESTI JÕGEDE KAART ja kirjeldused</a><br><a href="page3.html" class="text-info">ÕPETLIKUD VIDEOD</a><br><a href="page3.html" class="text-info">VAATA LISAKS...</a></strong></p>
                     </div>
                 </div>
             </div>
@@ -170,7 +170,7 @@
                     <div data-form-alert="" hidden="">Täname päringu eest!
 Vastame peatselt ...</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="u4KBUGlXizlYKterGWg2WLosylv/OC8fZIHQrkD9rJpGc+b2ZNIblNzq182mpEOP5IGCllF+OnU1A/VbrWKqDvppNAT/tUmR//y/9g8txPhNPh8LnTzViT2np6RzwH+6">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="rqJwjUpLBL/NAL+BVM6lLuImrJPROahnni/BLp/HOcQmog6YoQAr+TTJxWZDOQZjgzbAImaWu+3ZHaW/ECEDhZLSRu+Wa1W6ZzSlj9mi5yDD6RWBxRMDJj+0QZm2U0Vr">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
