--- a/www.arteenused.ee.html
+++ b/www.arteenused.ee.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple web builder</a></section><section class="mbr-section content8 cid-resXN6hAue" id="content8-1a">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section class="mbr-section content8 cid-resXN6hAue" id="content8-1a">
 
     
 
@@ -229,7 +229,7 @@
         <div class="media-container-row content text-white">
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
-                    <a href="http://www.arteenused.ee">
+                    <a href="www.arteenused.ee.html">
                         <img src="assets/images/arteenused-logo-hw-black-2-284x193.png" alt="Mobirise" title="">
                     </a>
                 </div>
