create github pages

--- a/jogedekaart.html
+++ b/jogedekaart.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="mbr-section content8 cid-resYUsaVW4" id="content8-1d">
+<section class="engine"><a href="https://mobirise.info/o">free portfolio web templates</a></section><section class="mbr-section content8 cid-resYUsaVW4" id="content8-1d">
 
     
 
@@ -248,7 +248,7 @@
                     <div data-form-alert="" hidden="">Täname päringu eest!
 Vastame peatselt ...</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="dalUfaxyseFZM4xjaU69abYBsef0kPIRAaXekLLRTLWQTSsmqPMfL4YBpr4Vt07N+pWs4oFcJoHZ+0FmQIQllods46waP4XQy0dplq4HJmO84dkSrbKYmLPUkDg4ggV9">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="7CsAtLnhhU8gTTbJvhK1LvWwhK/QT4qw52GxGZiXvG0YJa5TYTEJUReIwVU4ssKJJT52KNFzmbNLc56gKna291MYq+MkhynJTnvzHNi/L5gB7qHleMnyep++hezsEOit">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
