--- a/kanuurent.html
+++ b/kanuurent.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">free html site templates</a></section><section class="mbr-section content8 cid-resYS8TEgR" id="content8-1c">
+<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="mbr-section content8 cid-resYS8TEgR" id="content8-1c">
 
     
 
@@ -179,7 +179,7 @@
                     <div data-form-alert="" hidden="">Täname päringu eest!
 Vastame peatselt ...</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="A3kA2VgjmhKko6gBdpvYo+n2w3nDGNXBQKH3ljUyN/9/4lxxDkx8CwsTdcpZzds32dqCqOV5qQZRpEGk6WcEu+af+D6WyPA3c7oJBLrSepc8xSqqNSxF7Pf6/GNQk4Pk">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="fZhAFhMhzG+SbE6zCuv5rA9+fE6Ux86BhOfQY8l+GyXXWoHhxEEWwao6hmaKkn7HAllzTmA/pVAFpARUCdGSCaSiXYxgxBeKDvu9ttOOxZx7pVt2VKFiyqNxuPJTWdbn">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
