--- a/koristusseadmed.html
+++ b/koristusseadmed.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="mbr-section content8 cid-rfx7Jht8Oz" id="content8-1n">
+<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="mbr-section content8 cid-rfx7Jht8Oz" id="content8-1n">
 
     
 
@@ -199,7 +199,7 @@
                     <div data-form-alert="" hidden="">Täname päringu eest!
 Vastame peatselt ...</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Jxt7g8DizFCmFfvFKjFPUgYd69Q8i4VYED071r0CNdZ8nVa7w1DNzkUONNOt1K9JDAD0SQj8iMOHQTfxQliSlS7hht8OeseYbXPpIKkkLDfgdQScUtjbYkGCBuL+zKiL">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="owH0oSjOXOsgyGTkR+wWsCNJDrjEx1ywVR5xx65Qn2pOzVqPOi5DWk3N79sYl9mgbOfYZTRecLHAPIdMnC4ACQT0lTmPhHE+8LBYrcKJrpJ862kDLSGcrTOXEfJeMuEg">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
