--- a/vaikebussirent.html
+++ b/vaikebussirent.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple website maker</a></section><section class="mbr-section content8 cid-resYOVMjit" id="content8-1b">
+<section class="engine"><a href="https://mobirise.info/f">simple web maker</a></section><section class="mbr-section content8 cid-resYOVMjit" id="content8-1b">
 
     
 
@@ -350,7 +350,7 @@
                     <div data-form-alert="" hidden="">Täname päringu eest!
 Vastame peatselt ...</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="jUi74mrGXNnLrfYC6GxOe3xUZAqIO7dO+eHz7blFGajj8j/qYR29Xyi76lBJZ84DGcLy0FGnPwIaXnD4VzkaI8ec7n+GCni+xaUmtqZj7im9hOW/jpOZmHMkINgJ1+cK">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="PZQaSd3fNKVCd6Osh8bmWAARp/8vlUJuEBxM2sW2xttewZnwIOF62fXkTZp6fElap+9NSNBejtleXAtDiwf2F07eIw8iUNkL5R0VCI/QAI5/8f4j4KP0NylJhbbbqUKB">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
