--- a/kanuurent.html
+++ b/kanuurent.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="mbr-section content8 cid-resYS8TEgR" id="content8-1c">
+<section class="engine"><a href="https://mobirise.info/z">best free html templates</a></section><section class="mbr-section content8 cid-resYS8TEgR" id="content8-1c">
 
     
 
@@ -179,7 +179,7 @@
                     <div data-form-alert="" hidden="">Täname päringu eest!
 Vastame peatselt ...</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="fZhAFhMhzG+SbE6zCuv5rA9+fE6Ux86BhOfQY8l+GyXXWoHhxEEWwao6hmaKkn7HAllzTmA/pVAFpARUCdGSCaSiXYxgxBeKDvu9ttOOxZx7pVt2VKFiyqNxuPJTWdbn">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="xbHKbD6VMSS1YTf2EAOHFWHx3gCt/2VHPfI/muYtdVfePJTWQs1fT3VmAAtdHOH30oCkNsDZPq4wlAZcg/v8whZjqwCZStaao/tHd2o5WxFn8xudIjkXSZct1bHVT768">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
