--- a/jogedekaart.html
+++ b/jogedekaart.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="mbr-section content8 cid-resYUsaVW4" id="content8-1d">
+<section class="engine"><a href="https://mobirise.info/e">make a site for free</a></section><section class="mbr-section content8 cid-resYUsaVW4" id="content8-1d">
 
     
 
@@ -248,7 +248,7 @@
                     <div data-form-alert="" hidden="">Täname päringu eest!
 Vastame peatselt ...</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="wHwR5pDXJQODClc2tt7P+lv9KfDaeIeTEntcLCdiSdGue9jWt1sEGBo6NXi4Zf+vdiEatTZWWQfQvqejCkLzUImgB8m3H0hba3CPpNxlPFS8ewkqJLGxpPF7XFROdWJP">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="pVSXAS2S21X8yx0t+3eaIP9pX+wwo2sNlEnItfDJY7kztvyMguk9BPbalmnaAEjj/CLzbAT0gUR7KkJQxhuvhtOqCgdzsKlGItdelGyKhyE8yShy3Wn78/EX06OhFxrk">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
