create github pages

--- a/tingimused.html
+++ b/tingimused.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">how to create a web page for free</a></section><section class="mbr-section article content1 cid-rfC1I6qXD6" id="content1-2e">
+<section class="engine"><a href="https://mobirise.info/g">how to build your own site for free</a></section><section class="mbr-section article content1 cid-rfC1I6qXD6" id="content1-2e">
     
      
 
