--- a/www.arteenused.ee.html
+++ b/www.arteenused.ee.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="mbr-section article content1 cid-rfBZU2GVwJ" id="content1-28">
+<section class="engine"><a href="https://mobirise.info/z">best free css templates</a></section><section class="mbr-section article content1 cid-rfBZU2GVwJ" id="content1-28">
     
      
 
@@ -127,7 +127,7 @@
                         <a href="koristusseadmed.html"><img src="assets/images/32cf8736-f3c5-43dc-83a3-db4e844728e9-872x654.jpg" alt="Mobirise" title=""></a>
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title pb-3 mbr-fonts-style display-7"><a href="koristusseadmed.html"><strong>KORISTUSSEADMETE RENT</strong></a><br><strong>KORISTUSTEENUS</strong></h4>
+                        <h4 class="card-title pb-3 mbr-fonts-style display-7"><a href="koristusseadmed.html"><strong>KORISTUSSEADMETE RENT</strong></a><strong><br><a href="koristusseadmed.html"><b>KORISTUSTEENUS</b></a></strong></h4>
                         <p class="mbr-text mbr-fonts-style display-7"><a href="koristusseadmed.html" class="text-black">
                             Puhtas kodus on hea elada. </a><br><a href="koristusseadmed.html" class="text-black">Rendi koristusseadmed meilt ja tee koristamine lihtsamaks.</a><br>Vaata lisaks ...<a href="koristusseadmed.html" class="text-warning"><br></a><br><br><a href="koristusseadmed.html" class="text-warning">
                         </a></p>
