--- a/tingimused.html
+++ b/tingimused.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">how to create your own web page</a></section><section class="mbr-section article content1 cid-rfC1I6qXD6" id="content1-2e">
+<section class="engine"><a href="https://mobirise.info/h">how to create a web page</a></section><section class="mbr-section article content1 cid-rfC1I6qXD6" id="content1-2e">
     
      
 
